@@ -32,6 +32,7 @@ E(OP_DzJoinExpeditionConfirm)
 E(OP_DzLeaderStatus)
 E(OP_DzMemberList)
 E(OP_ExpansionInfo)
+E(OP_FormattedMessage)
 E(OP_GMLastName)
 E(OP_GMTrainSkillConfirm)
 E(OP_GroundSpawn)
