@@ -24,6 +24,7 @@ E(OP_DzJoinExpeditionConfirm)
 E(OP_DzLeaderStatus)
 E(OP_DzMemberList)
 E(OP_ExpansionInfo)
+E(OP_FormattedMessage)
 E(OP_GroundSpawn)
 E(OP_GuildMemberList)
 E(OP_Illusion)
