@@ -16,6 +16,7 @@ E(OP_DzExpeditionList)
 E(OP_DzJoinExpeditionConfirm)
 E(OP_DzLeaderStatus)
 E(OP_DzMemberList)
+E(OP_FormattedMessage)
 E(OP_GuildMemberLevelUpdate)
 E(OP_GuildMemberList)
 E(OP_Illusion)
