@@ -26,6 +26,7 @@ E(OP_DzJoinExpeditionConfirm)
 E(OP_DzLeaderStatus)
 E(OP_DzMemberList)
 E(OP_ExpansionInfo)
+E(OP_FormattedMessage)
 E(OP_GroundSpawn)
 E(OP_GroupCancelInvite)
 E(OP_GroupFollow)
